--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             
             <li class="nav-item active">
@@ -11,15 +11,15 @@
             </li>
 
             <li class="nav-item active">
-            <a class="nav-link" href="#">Policy Submission<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/submission">Policy Submission<span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item active">
-            <a class="nav-link" href="#">Sign Up<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/signup">Sign Up<span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item active">
-            <a class="nav-link" href="#">Sign In<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/signin">Sign In<span class="sr-only">(current)</span></a>
             </li>
         </ul>
             <form class="form-inline my-2 my-lg-0">
