--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,42 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px; 
+  background-color: darkslategray;
+}
+
+.radio {
+  display: block;
+}
+
+.container {
+  background-color: #e4ecef;
+}
+
+/* .lvlogo {
+  width: 45px;
+} */
+
+.jumbotron {
+  width: 70%;
+  align-content: center;
+  background-color: #e4ecef;
+}
+
+.container {
+  width: 60%;
+};
+
+/* .vertical-center {
+  min-height: 100%;  
+  min-height: 100vh; 
+
+  display: flex;
+  align-items: center;
+} */
