--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,13 +1,14 @@
 <div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <img id="lvlogo img-thumbnail" src="../../public/images/lv.png">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             
             <li class="nav-item active">
-            <a class="nav-link" href="#">Policies<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/policies">Policies<span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item active">
@@ -20,6 +21,10 @@
 
             <li class="nav-item active">
             <a class="nav-link" href="/signin">Sign In<span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item active">
+            <a class="nav-link" href="/policydetail">Policy Detail<span class="sr-only">(current)</span></a>
             </li>
         </ul>
             <form class="form-inline my-2 my-lg-0">
