--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -1,3 +1,4 @@
+<div class="jumbotron">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -28,3 +29,4 @@
     </tr>
   </tbody>
 </table>
+</div>
