Sync local branch with GitHub.

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -14,3 +14,5 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<a href="/auth/facebook">Login with Facebook</a>
