added dummy index page, edited nav and header partials, added footer image

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,38 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+{{> header}}
+<div id="front-page-div">
+  <img id="front-page-image" src="/images/handholdingphone.jpg">
+</div>
+{{> nav}} 
+<div class="jumbotron">
+    <h4 class="display-4">Alcohol on Sundays</h4>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Vestibulum eleifend libero a tristique lacinia. Donec non metus tortor. 
+        Phasellus justo tortor, consectetur molestie augue at, elementum varius justo. 
+        Aenean ac ante enim. </p>
+    <hr class="my-4">
+    <p>Please vote yes or no.</p>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <form>
+        <fieldset class="form-group">
+          <!-- <legend>Radio buttons</legend> -->
+          <div class="form-check">
+            <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="1" checked>
+              Yes
+            </label>
           </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+          <div class="form-check">
+          <label class="form-check-label">
+              <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="0">
+              No
+            </label>
           </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
+        </fieldset>
+        <div>
+        <button type="submit" class="btn btn-primary btn-lg">Submit Vote</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
