--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,13 +5,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="../../public/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
   <title>Home Page</title>
 </head>
 
 <body>
-  {{> nav}}
   {{{body}}}
   {{> footer}}
 </body>
