--- a/views/partials/nav2.handlebars
+++ b/views/partials/nav2.handlebars
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {{!-- <img id="lvlogo" class="img-thumbnail" src="/images/lv.png"> --}}
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item active p-2">
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             
@@ -15,13 +15,13 @@
             <a class="nav-link" href="/submission">Policy Submission<span class="sr-only">(current)</span></a>
             </li>
 
-            {{!-- <li class="nav-item active">
+            <li class="nav-item active">
             <a class="nav-link" href="/signup">Sign Up<span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item active">
             <a class="nav-link" href="/signin">Sign In<span class="sr-only">(current)</span></a>
-            </li> --}}
+            </li>
 
             <li class="nav-item active">
             <a class="nav-link" href="/policydetail">Policy Detail<span class="sr-only">(current)</span></a>
