--- a/views/policydetail.handlebars
+++ b/views/policydetail.handlebars
@@ -1,3 +1,5 @@
+{{> header}}
+{{> nav2}}
  <div class="jumbotron">
     <h4 class="display-4">Alcohol on Sundays</h4>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
