--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -19,9 +19,9 @@
   background-color: #e4ecef;
 }
 
-/* .lvlogo {
+#lvlogo {
   width: 45px;
-} */
+}
 
 .jumbotron {
   width: 70%;
@@ -40,3 +40,31 @@
   display: flex;
   align-items: center;
 } */
+
+#front-page-image {
+  display: block; margin-left: auto; margin-right: auto;
+}
+
+#front-page-div {
+  background-color: #fdaf40;
+}
+
+.topnav {
+  float: right;
+}
+
+body {
+  background-color: grey;
+}
+
+.navbar {
+  background-color: tan;
+}
+
+#hands-div {
+  background-color: white;
+}
+
+#hands-image {
+  box-flex: center;
+}
