--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,3 +1,4 @@
+<div id="hands-div"><img id="hands-image" src="/images/handsagain.jpg"></div>
 <footer class="footer">
     <div class="footer-copyright text-center py-3">© 2018 Copyright LocalVote</a>
     </div>
