fixed problems with nav bar and fixed divisions in sign up page

--- a/views/partials/header2.handlebars
+++ b/views/partials/header2.handlebars
@@ -4,6 +4,9 @@
         <img id="lvlogo" class="img-thumbnail" src="/images/lv.png">
         <ul class="navbar-nav mr-auto">
 
+            <span id="brand" class="navbar-brand mb-0 h1">LocalVote</span>
+            </nav>
+
             <li class="nav-item active float-right topnav">
             <a class="nav-link mr-auto" href="/signin">Sign In<span class="sr-only">(current)</span></a>
             </li>
