--- a/views/partials/nav2.handlebars
+++ b/views/partials/nav2.handlebars
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {{!-- <img id="lvlogo" class="img-thumbnail" src="/images/lv.png"> --}}
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active p-2">
+            <li class="nav-item active">
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             
