--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -5,16 +5,18 @@
    <h1>Sign In</h1>
   </div>
 <form>
-<div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="userPassword" placeholder="Password">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+  </form>
+  <div><a href="/auth/facebook">Login with Facebook</a></div>
+</div>
 
-<a href="/auth/facebook">Login with Facebook</a>
+
