--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -1,5 +1,11 @@
 {{> header2}}
 {{> nav2}}
+
+ <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-8">
+
 <div class="jumbotron">
 <table class="table table-hover">
   <thead>
@@ -31,4 +37,10 @@
     </tr>
   </tbody>
 </table>
+</div>
+
+</div>
+    <div class="col">
+    </div>
+  </div>
 </div>
