--- a/views/policydetail.handlebars
+++ b/views/policydetail.handlebars
@@ -1,5 +1,11 @@
 {{> header}}
 {{> nav2}}
+
+<div class="row">
+    <div class="col">
+    </div>
+    <div class="col-8">
+
  <div class="jumbotron">
     <h4 class="display-4">Alcohol on Sundays</h4>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -30,6 +36,13 @@
         <button type="submit" class="btn btn-primary btn-lg">Submit Vote</button>
         </div>
       </form>
+    </div>
+  </div>
+</div>
+
+
+</div>
+    <div class="col">
     </div>
   </div>
 </div>
