--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,5 +1,11 @@
 {{> header}}
 {{> nav2}}
+
+<div class="row">
+    <div class="col">
+    </div>
+    <div class="col-10">
+
 <div class="container";>
   <div>
    <h1>Sign In</h1>
@@ -19,4 +25,8 @@
   <div><a href="/auth/facebook">Login with Facebook</a></div>
 </div>
 
-
+</div>
+    <div class="col">
+    </div>
+  </div>
+</div>
