--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,12 @@
 {{> header}}
 {{> nav2}}
-<div class="container" width=60%;>
+
+<div class="row">
+    <div class="col">
+    </div>
+    <div class="col-10">
+
+<div class="container">
   <div>
    <h1>Sign Up</h1>
   </div>
@@ -32,4 +38,10 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
+
+</div>
+    <div class="col">
+    </div>
+  </div>
 </div>
