--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -1,6 +1,13 @@
 {{> header}}
 {{> nav2}}
-<div class="container" width=60%;>
+
+<div class="row">
+    <div class="col">
+    </div>
+    <div class="col-10">
+
+
+<div class="container">
   <div>
     <h1>Create A Policy</h1>
   </div>
@@ -27,4 +34,10 @@
         <textarea class="form-control" id="tags" rows="1"></textarea>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
+
+</div>
+    <div class="col">
+    </div>
+  </div>
 </div>
