--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,11 +5,12 @@
 .footer {
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 60px;
   line-height: 60px; 
   background-color: darkslategray;
-}
+  }
 
 .radio {
   display: block;
