--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -7,6 +7,9 @@
     <div class="col-8">
 
 <div class="jumbotron">
+  <div>
+    <h1>Policy Proposals</h1>
+  </div>
 <table class="table table-hover">
   <thead>
     <tr>
