--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,6 +6,8 @@
     </div>
     <div class="col-10">
 
+<div class="sign-form">
+
 <div class="container">
   <div>
    <h1>Sign Up</h1>
@@ -38,6 +40,8 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
+
 </div>
 
 </div>
