--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -5,8 +5,11 @@
     <div class="col">
     </div>
     <div class="col-10">
-
+<div class="sign-form">
 <div class="container";>
+
+
+
   <div>
    <h1>Sign In</h1>
   </div>
@@ -23,7 +26,12 @@
   <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   <div><a href="/auth/facebook">Login with Facebook</a></div>
+
+  </div>
+
 </div>
+
+
 
 </div>
     <div class="col">
