--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,9 @@
 <body>
   {{{body}}}
   {{> footer}}
+
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://cdnjs.com/libraries/awesomplete"></script>
 </body>
 
 </html>
