--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -41,4 +41,4 @@
   </div>
 </div>
 
-<script src="../public/js/submission.js" type="text/javascript"></script>
+<script src="js/submit.js" type="text/javascript"></script>
