--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,5 @@
 <div id="hands-div"><img id="hands-image" src="/images/handsagain.jpg"></div>
-<footer class="footer">
+{{!-- <footer class="footer">
     <div class="footer-copyright text-center py-3">© 2018 Copyright LocalVote</a>
     </div>
-</footer>
+</footer> --}}
