--- a/views/partials/header2.handlebars
+++ b/views/partials/header2.handlebars
@@ -2,6 +2,7 @@
 <nav class="navbar navbar-expand-lg style="background-color: #tan;">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <img id="lvlogo" class="img-thumbnail" src="/images/lv.png">
+        {{!-- <img src="/images/images/beigelocalvote.png"> --}}
         <ul class="navbar-nav mr-auto">
 
             {{!-- <span id="brand" class="navbar-brand mb-0 h1">LocalVote</span>
