--- a/views/policydetail.handlebars
+++ b/views/policydetail.handlebars
@@ -1,22 +1,22 @@
 {{> header}}
 {{> nav2}}
 
+<div class="col-xs-12" style="height:50px;"></div>
+
 <div class="row">
     <div class="col">
     </div>
     <div class="col-8">
 
- <div class="jumbotron">
-    <h4 class="display-4">Alcohol on Sundays</h4>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+<div class="card">
+    <h5 class="card-header">Policy Proposal</h5>
+    <div class="card-body">
+      <h5 class="card-title">Lorem Ipsum</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Vestibulum eleifend libero a tristique lacinia. Donec non metus tortor. 
         Phasellus justo tortor, consectetur molestie augue at, elementum varius justo. 
         Aenean ac ante enim. </p>
-    <hr class="my-4">
-    <p>Please vote yes or no.</p>
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <form>
+        <form>
         <fieldset class="form-group">
           <!-- <legend>Radio buttons</legend> -->
           <div class="form-check">
@@ -37,8 +37,8 @@
         </div>
       </form>
     </div>
-  </div>
 </div>
+
 
 
 </div>
@@ -46,3 +46,7 @@
     </div>
   </div>
 </div>
+
+<div class="col-xs-12" style="height:50px;"></div>
+
+
