--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,25 @@
 {{> header}}
 {{> nav2}}
 
+<div class="col-xs-12" style="height:50px;"></div>
+
 <div class="row">
     <div class="col">
     </div>
-    <div class="col-10">
+    <div class="col-4">
 
-<div class="sign-form">
+{{!-- <div >
 
-<div class="container">
-  <div>
-   <h1>Sign Up</h1>
+<div class="container"> --}}
+
+<div class="card">
+  <div class="card-header">
+    Sign Up
   </div>
- 
-    <form>
+  <div class="card-body">
+    <h5 class="card-title">Vote alongside your peers</h5>
+    <p class="card-text">
+<form>
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -23,16 +29,34 @@
             <label for="exampleInputPassword1">Enter New Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
+        
+       <label for="exampleFormControlTextarea1">Age</label>
+        <textarea class="form-control" id="submitAge" rows="1"></textarea>
 
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+    </p>
+
+
+  </div>
+{{!-- </div> --}}
+
+  {{!-- <div>
+   <h1>Sign Up</h1>
+  </div>
+  --}}
+    {{!-- <form>
         <div class="form-group">
-                <label for="exampleSelect1">County</label>
-                <select class="form-control" id="exampleSelect1">
-                <option value="Cobb">Cobb</option>
-                <option value="DeKalb">DeKalb</option>
-                <option value="Fulton">Fulton</option>
-                <option value="Gwinnett">Gwinnett</option>
-                </select>
-            </div>
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Enter New Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
         
        <label for="exampleFormControlTextarea1">Age</label>
         <textarea class="form-control" id="submitAge" rows="1"></textarea>
@@ -42,10 +66,12 @@
     </form>
 </div>
 
-</div>
+</div> --}}
 
 </div>
     <div class="col">
     </div>
   </div>
 </div>
+
+<div class="col-xs-12" style="height:50px;"></div>
