drop down added again

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 {{> header}}
 <div id="front-page-div">
   {{!-- <img src="/images/localVote.png">  --}}
-  <img class="front-page-image" src="/images/imageandlogo.png">
+  <img id="front-page-image" src="/images/imageandlogo.png">
 </div>
 {{> nav}} 
 
