--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -21,6 +21,17 @@
 
         <label for="exampleFormControlTextarea1">Description</label>
         <textarea class="form-control" id="submitDescription" rows="7"></textarea></p>
+
+        <div class="form-group">
+                <label for="exampleSelect1">Select Topic</label>
+                <select class="form-control" id="exampleSelect1">
+                <option>Business</option>
+                <option>Recreation</option>
+                <option>Infrastructure</option>
+                <option>Schools</option>
+                <option>General</option>
+                </select>
+            </div>
     
     <button type="submit" class="btn btn-primary">Submit</button>
     </form>
