--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -52,16 +52,17 @@
 
 .front-page-image {
   display: block; 
+  position: absolute;
   margin-left: auto; margin-right: auto;
   background-color: #fdaf40;
-  width: 100%;
+  max-width: 100%;
   border: 0;
   margin: 0;
   outline: 0;
   padding: 0;
   display: block;
   overflow: auto;
-}
+} 
 
 #front-page-div {
   background-color: #fdaf40;
