--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -45,12 +45,12 @@
     <h1>Create A Policy</h1>
   </div> --}}
  
-    <form id="newPolicy">
+    {{!-- <form id="newPolicy">
         <label for="exampleFormControlTextarea1">Title</label>
         <textarea class="form-control" id="submitTitle" rows="1"></textarea>
 
         <label for="exampleFormControlTextarea1">Description</label>
-        <textarea class="form-control" id="submitDescription" rows="7"></textarea> --}}
+        <textarea class="form-control" id="submitDescription" rows="7"></textarea> --}} 
 {{!-- 
              <div class="form-group">
                 <label for="exampleSelect1">Select Topic</label>
