Passport is working! :)

--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -1,6 +1,7 @@
 {{> header2}}
 {{> nav2}}
 <div class="jumbotron">
+  <input type="search" class="form-control" id="autocomplete" placeholder="Results will update as you stop typing...">
 <table class="table table-hover">
   <thead>
     <tr>
