--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
-
   <title>Home Page</title>
 </head>
 
@@ -15,6 +13,7 @@
   {{> footer}}
 
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/autocomplete.js"></script>
 </body>
 
 </html>
