--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="/js/autocomplete.js"></script>
+  <script src="js/vote.js" type="text/javascript"></script>
 </body>
 
 </html>
