--- a/views/policydetail.handlebars
+++ b/views/policydetail.handlebars
@@ -33,7 +33,7 @@
           </div>
         </fieldset>
         <div>
-        <button type="submit" class="btn btn-primary btn-lg">Submit Vote</button>
+        <button id="submit-vote" type="submit" class="btn btn-primary btn-lg">Submit Vote</button>
         </div>
       </form>
     </div>
