--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -15,7 +15,8 @@
   </div>
   <div class="card-body">
     <h5 class="card-title">Post to LocalVote</h5>
-    <p class="card-text">    <form>
+    <p class="card-text">    
+      <form id="newPolicy">
         <label for="exampleFormControlTextarea1">Title</label>
         <textarea class="form-control" id="submitTitle" rows="1"></textarea>
 
@@ -24,7 +25,7 @@
 
         <div class="form-group">
                 <label for="exampleSelect1">Select Topic</label>
-                <select class="form-control" id="exampleSelect1">
+                <select class="form-control" id="selectTopic">
                 <option>Business</option>
                 <option>Recreation</option>
                 <option>Infrastructure</option>
@@ -39,33 +40,3 @@
   </div>
 </div>
 
-
-{{!-- <div class="container">
-  <div>
-    <h1>Create A Policy</h1>
-  </div> --}}
- 
-    {{!-- <form id="newPolicy">
-        <label for="exampleFormControlTextarea1">Title</label>
-        <textarea class="form-control" id="submitTitle" rows="1"></textarea>
-
-        <label for="exampleFormControlTextarea1">Description</label>
-        <textarea class="form-control" id="submitDescription" rows="7"></textarea> --}} 
-{{!-- 
- --}}
-
-        {{!-- <label for="exampleFormControlTextarea1">Tags</label>
-        <textarea class="form-control" id="tags" rows="1"></textarea> --}}
-        {{!-- <button type="submit" class="btn btn-primary">Submit</button>
-    </form> --}}
-{{!-- </div> --}}
-
-</div>
-    <div class="col">
-    </div>
-  </div>
-</div>
-
-<div class="col-xs-12" style="height:50px;"></div>
-
-<script src="js/submit.js" type="text/javascript"></script>
