unified with master

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,11 +24,11 @@
   width: 45px;
 }
 
-/* .jumbotron {
-  /* width: 70%; 
+.jumbotron {
+  /* width: 70%; */
   align-content: center;
   background-color: #fffeee;
-} */
+}
 
 
 /* textarea {
@@ -45,33 +45,30 @@
 /* .vertical-center {
   min-height: 100%;  
   min-height: 100vh; 
-
   display: flex;
   align-items: center;
 } */
 
 .front-page-image {
-  /* display: block;  */
-  /* position: absolute; */
-  /* margin-left: auto; 
-  margin-right: auto; */
+  display: block; 
+  position: absolute;
+  margin-left: auto; margin-right: auto;
   background-color: #fdaf40;
-  /* max-width: 100%; */
-  /* border: 0; */
+  max-width: 100%;
+  border: 0;
   margin: 0;
-  height: 350px;
-  /* outline: 0; */
-  /* padding: 0; */
-  /*overflow: auto;*/
-  /* border-color: #fdaf40; */
+  outline: 0;
+  padding: 0;
+  display: block;
+  overflow: auto;
 } 
 
 #front-page-div {
   background-color: #fdaf40;
-  /* border: 0;
+  border: 0;
   margin: 0;
-  outline: 0; */
-  /* padding: 0; */
+  outline: 0;
+  padding: 0;
 }
 
 .topnav {
@@ -88,12 +85,10 @@ body {
 
 #hands-div {
   background-color: white;
-  max-width: 100%;
 }
 
 #hands-image {
-  /*box-flex: center;*/
-  max-width: 100%;
+  box-flex: center;
 }
 
 #brand {
