--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,7 @@
 {{> header}}
 <div id="front-page-div">
   {{!-- <img src="/images/localVote.png">  --}}
-  <img class="col-12 pr-0 pl-0" id="front-page-image" src="/images/imageandlogo.png">
-
+  <img id="front-page-image" src="/images/imageandlogo.png">
 </div>
 {{> nav}} 
 
