--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -12,6 +12,7 @@
     <h5 class="card-header">Policy Proposals</h5>
     <div class="card-body"></div>
     <h5 class="card-title"></h5>
+    <input type="search" class="form-control" id="auto-complete" placeholder="Text input">
 
   <p class="card-text">
   <table class="table table-hover">
@@ -37,6 +38,12 @@
       {{/each}}
     </tbody>
   </table>
+  <div class="autocomplete-suggestions">
+    <div class="autocomplete-group"><strong>NHL</strong></div>
+    <div class="autocomplete-suggestion autocomplete-selected">...</div>
+    <div class="autocomplete-suggestion">...</div>
+    <div class="autocomplete-suggestion">...</div>
+  </div>
   </p>
 
 
@@ -51,4 +58,3 @@
 
 
 <div class="col-xs-12" style="height:50px;"></div>
-<script src="js/index.js" type="text/javascript"></script>
