get api route corrected

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,8 +20,8 @@
   <div class="card">
     <h5 class="card-header">Recent Policy</h5>
     <div class="card-body">
-      <h5 class="card-title">Lorem Ipsum</h5>
-      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      <h5 id="policy-title" class="card-title">Lorem Ipsum</h5>
+      <p id="policy-text" class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Vestibulum eleifend libero a tristique lacinia. Donec non metus tortor. 
         Phasellus justo tortor, consectetur molestie augue at, elementum varius justo. 
         Aenean ac ante enim. </p>
