--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -3,57 +3,31 @@
 
 <div class="col-xs-12" style="height:50px;"></div>
 
- <div class="row">
-    <div class="col">
-    </div>
-    <div class="col-10">
+<div class="row">
 
-  <div class="card">
-    <h5 class="card-header">Policy Proposals</h5>
-    <div class="card-body"></div>
-    <h5 class="card-title"></h5>
-    <input type="search" class="form-control" id="auto-complete" placeholder="Text input">
-
-  <p class="card-text">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Title</th>
-        <th scope="col">Topic</th>
-        <th scope="col">Date</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Add a bike lane to Maple Street</td>
-        <td>Infrastructure</td>
-        <td>10/29/2018</td>
-      </tr>
-      {{#each post}}
-        <td>{{this.title}}</td>
-        <td>{{this.category}}</td>
-        <td>{{this.createdAt}}</td>
-      {{/each}}
-    </tbody>
-  </table>
-  <div class="autocomplete-suggestions">
-    <div class="autocomplete-group"><strong>NHL</strong></div>
-    <div class="autocomplete-suggestion autocomplete-selected">...</div>
-    <div class="autocomplete-suggestion">...</div>
-    <div class="autocomplete-suggestion">...</div>
+  <div class="col">
   </div>
-  </p>
 
+  <div class="col-10">
+    <div class="card">
+      <h5 class="card-header">Policy Proposals</h5>
+      <div class="card-body">
 
-</div>
+        <div class="container">
+          <input type="search" class="form-control" id="auto-complete" placeholder="Search">
+        </div>
 
+        <div class="container" id="search-results">
+        </div>
 
-</div>
-    <div class="col">
+      </div>
     </div>
   </div>
+
+  <div class="col">
+  </div>
+
+</div>
 </div>
 
 
