--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -3,6 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {{!-- <img id="lvlogo" class="img-thumbnail" src="/images/lv.png"> --}}
         <ul class="navbar-nav mr-auto">
+            <img id="lvlogo" class="img-thumbnail" src="/images/lv.png">
             <li class="nav-item active">
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
