--- a/views/partials/nav2.handlebars
+++ b/views/partials/nav2.handlebars
@@ -1,7 +1,7 @@
 <div>
-<nav class="navbar navbar-expand-lg style="background-color: #tan;"">
+<nav class="navbar navbar-expand-lg">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        {{!-- <img id="lvlogo" class="img-thumbnail" src="/images/lv.png"> --}}
+        <img id="lvlogo" class="img-thumbnail" src="/images/lv.png">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
@@ -23,14 +23,5 @@
             <a class="nav-link" href="/signin">Sign In<span class="sr-only">(current)</span></a>
             </li> --}}
 
-            <li class="nav-item active">
-            <a class="nav-link" href="/policydetail">Policy Detail<span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-            <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
 </nav>
 </div>
