--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -1,14 +1,10 @@
 {{> header2}}
 {{> nav2}}
+<div class="container">    
+  <div class="col-xs-12" style="height:50px;"></div>
 
-<div class="col-xs-12" style="height:50px;"></div>
-
-<div class="row">
-
-  <div class="col">
-  </div>
-
-  <div class="col-10">
+  <div class="row">
+    <div class="col-12">    
     <div class="card">
       <h5 class="card-header">Policy Proposals</h5>
       <div class="card-body">
@@ -22,13 +18,8 @@
 
       </div>
     </div>
+    
   </div>
-
-  <div class="col">
-  </div>
-
-</div>
 </div>
 
 
-<div class="col-xs-12" style="height:50px;"></div>
