--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,11 @@
-<div id="hands-div"><img id="hands-image" src="/images/handsagain.jpg"></div>
+<div class="footer navbar-fixed-bottom">
+
+<div id="hands-div">
+    <div class="footer-copyright text-center py-3">© 2018 Copyright LocalVote</a>
+    {{!-- <img id="hands-image" src="/images/handsagain.jpg"></div> --}}
+</div>
 {{!-- <footer class="footer">
     <div class="footer-copyright text-center py-3">© 2018 Copyright LocalVote</a>
     </div>
 </footer> --}}
+</div>
