--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
     <div class="col-12">
       
     <div><h3>LocalVote is a policy proposal system. Sign in to vote on local proposals to have your voice heard.
-    </h3><p>Policy proposals are voted on by local citizens. The information is viewed by local representatives.</p></div>
+    </h3><p>Policy proposals are voted on by local citizens and viewed by members of local government.</p></div>
       <div class="card">
         <h5 class="card-header">Recent Policy</h5>
         <div class="card-body">
@@ -47,6 +47,14 @@
   </div>
 
   <div class="col-xs-12" style="height:50px;"></div>
+  </div>
+  </div>
+
+ 
+  </div>
+   {{> footer}}
+
+
       
 
 
