--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -21,5 +21,14 @@
     
   </div>
 </div>
+<div class="col-xs-12" style="height:50px;"></div>
+<div class="col-xs-12" style="height:50px;"></div>
+{{!-- <div class="col-xs-12" style="height:50px;"></div>
+<div class="col-xs-12" style="height:50px;"></div>
+<div class="col-xs-12" style="height:50px;"></div>
+<div class="col-xs-12" style="height:50px;"></div> --}}
+</div>
+
+{{> footer}}
 
 
