--- a/views/partials/nav2.handlebars
+++ b/views/partials/nav2.handlebars
@@ -15,13 +15,10 @@
             <a class="nav-link" href="/submission">Policy Submission<span class="sr-only">(current)</span></a>
             </li>
 
-            {{!-- <li class="nav-item active">
-            <a class="nav-link" href="/signup">Sign Up<span class="sr-only">(current)</span></a>
-            </li>
-
             <li class="nav-item active">
-            <a class="nav-link" href="/signin">Sign In<span class="sr-only">(current)</span></a>
-            </li> --}}
-
+            <a class="nav-link" href="/auth/facebook">Sign In<span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+        </div>
 </nav>
 </div>
