--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,7 +49,11 @@
 .container {
   /* width: 60%; */
   background-color: #ffffff;
+  margin-top: 2rem;
+  margin-bottom: 5.5rem;
+  border-radius: 5px;
 };
+
 
 /* .vertical-center {
   min-height: 100%;  
@@ -81,8 +85,8 @@ body {
 }
 
 #hands-div {
-  background-color: #003f64;
-  border-top: 5px solid #003f64;
+  background-color: rgb(0, 63, 100);
+  border-top: 5px solid rgb(0, 63, 100);
 }
 
 #hands-image {
