--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -8,7 +8,7 @@
     <div class="col-12">
       <div class="card">
         <div class="card-header">
-          Create a Policy
+          <h5>Create a Policy</h5>
         </div>
         <div class="card-body">
           <h5 class="card-title">Post to LocalVote</h5>
