changed buffer space, added link to footer

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,8 @@
 <div class="footer navbar-fixed-bottom">
 
 <div id="hands-div">
-    <div class="footer-copyright text-center py-3">© 2018 Copyright LocalVote</a>
+    <div class="footer-copyright text-center py-3">
+        <p>© 2018 Copyright <a href="https://github.com/BarbaraHernandez/localvote">LocalVote</a></p>
     {{!-- <img id="hands-image" src="/images/handsagain.jpg"></div> --}}
 </div>
 {{!-- <footer class="footer">
