--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,8 +49,8 @@
 .container {
   /* width: 60%; */
   background-color: #ffffff;
-  margin-top: 2rem;
-  margin-bottom: 5.5rem;
+  margin-top: 2em;
+  margin-bottom: 5.5em;
   border-radius: 5px;
 };
 
@@ -123,9 +123,33 @@ button {
   color: white;
 }
 
-.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
-.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
-.autocomplete-selected { background: #F0F0F0; }
-.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
-.autocomplete-group { padding: 2px 5px; }
-.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+/*auto-complete style*/
+.autocomplete-suggestions {
+  border: 1px solid #999; 
+  background: #FFF; 
+  overflow: auto; 
+}
+
+.autocomplete-suggestion { 
+  padding: 2px 5px; 
+  white-space: nowrap; 
+  overflow: hidden; 
+}
+
+.autocomplete-selected {
+   background: #F0F0F0; 
+}
+
+.autocomplete-suggestions strong {
+  font-weight: normal; 
+  color: #3399FF; 
+}
+
+.autocomplete-group {
+   padding: 2px 5px; 
+}
+
+.autocomplete-group strong {
+   display: block; 
+   border-bottom: 1px solid #000; 
+}
