fixed spacing issues on policies page

--- a/views/policies.handlebars
+++ b/views/policies.handlebars
@@ -7,17 +7,17 @@
   <div class="row">
     <div class="col-12">
       <div class="card">
-        <h5 class="card-header">Policy Proposals</h5>
+        <h5 class="card-header">Proposed Policies</h5>
         <div class="card-body">
 
-          <div class="container">
+          <div class="flex-container">
             <input type="search" class="form-control" id="auto-complete" placeholder="Search">
           </div>
 
-          <div class="container" id="search-results">
+          <div class="flex-container" id="search-results">
           </div>
 
-          <div class="container" id="most-recent">
+          <div class="flex-container" id="most-recent">
             {{#each policy}}
             <div class="panel panel-default">
               <div class="panel-heading">
